# MY-RAG-PRACTICE

./: .gitignore  LEARNING_PROGRESS.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: GIT_GUIDE.md  GIT_QUICK_REF.md
scripts/: learn-commit.ps1  switch-commit.ps1
